// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SpacingBlockStyled /> should render component with \`inline = true\` 1`] = `
<SpacingBlockStyled
  inline={true}
>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "SpacingBlockStyled-y599jt-0",
          "isStatic": false,
          "lastClassName": "bWjvfO",
          "rules": Array [
            "display:",
            [Function],
            ";",
          ],
        },
        "displayName": "SpacingBlockStyled",
        "render": [Function],
        "styledComponentId": "SpacingBlockStyled-y599jt-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    inline={true}
  >
    <div
      className="SpacingBlockStyled-y599jt-0 bWjvfO"
    />
  </StyledComponent>
</SpacingBlockStyled>
`;

exports[`<SpacingBlockStyled /> should render component with the default props 1`] = `
<SpacingBlockStyled
  inline={false}
>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "SpacingBlockStyled-y599jt-0",
          "isStatic": false,
          "lastClassName": "bKLLoe",
          "rules": Array [
            "display:",
            [Function],
            ";",
          ],
        },
        "displayName": "SpacingBlockStyled",
        "render": [Function],
        "styledComponentId": "SpacingBlockStyled-y599jt-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    inline={false}
  >
    <div
      className="SpacingBlockStyled-y599jt-0 bKLLoe"
    />
  </StyledComponent>
</SpacingBlockStyled>
`;
